# cgm_missigness

./: README.md  cgm_missing_simulator.py  fitted_missingness.json  pyproject.toml  train_missing.py
.ipynb_checkpoints/: README-checkpoint.md
cgm_missing_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data_sample/.ipynb_checkpoints/: adult_001-checkpoint.csv
